[package]
name = "is31fl3733"
version = "0.1.0"
edition = "2021"
authors = ["Pini Grigio"]
categories = ["embedded", "no-std"]
description = "A platform agnostic driver to interface with the IS31FL3733 (16x12 LED Matrix Driver) written in Rust"
license = "unlicense"
repository = "https://github.com/0xa10/is31fl3733-rs"
readme = "README.md"


[dependencies]
diff-in-place = "0.1.2"
embedded-hal = "=1.0.0-rc.2"
heapless = "0.7.16"
