[package]
name = "is31fl3733"
version = "0.5.0"
edition = "2021"
authors = ["0xa10"]
categories = ["embedded", "no-std"]
description = "A platform agnostic driver to interface with the IS31FL3733 (16x12 LED Matrix Driver) written in Rust"
repository = "https://github.com/0xa10/is31fl3733-rs"
license-file = "LICENSE"
readme = "README.md"

[dependencies]
diff-in-place = "0.1.2"
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
heapless = "0.7.16"

[dev-dependencies]
futures-lite = "2.2.0"
lite-async-test = "0.1.3"
